UI/css/profile.css
@import "../css/main.css";
@import "../css/form.css";

/* Profile Nav */

#nav__profile {
  margin: 200px auto 50px;
  width: 80%;
  background: #eee;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding: 0;
}

#nav__profile ul {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  height: 50px;
}

#nav__profile ul > li {
  width: 100%;
  flex: 1 1 auto;
  border-right: 2px solid #ccc;
  padding: 14px;
  cursor: pointer;
}

#nav__profile ul > li:first-child {
  border-radius: 5px 0 0 5px;
}

#nav__profile ul > li:last-child {
  border-radius: 0 5px 5px 0;
  border: none;
}

#nav__profile ul img {
  width: 20px;
  height: 20px;
  vertical-align: middle;
  padding: 0 !important;
}

#nav__profile li.active {
  background: #fff;
}

#nav__profile ul > li > a.link-text {
  color: #116466;
  padding: 20px;
}

/* User profile view and settings */
#user-profile {
  width: 100%;
  margin-top: 20px !important;
}

#user-profile h3 {
  text-align: left;
}

/* User stats */
#user-profile .user-profile__stats {
  display: flex;
  justify-content: center;
  width: 90%;
  margin: 0 auto 20px;
  text-align: center;
}

#user-profile .user-profile__stats > div {
  flex: 1 1 auto;
}

#user-profile .user-profile__stats .stat-value {
  font-size: 2em;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

/* User profile */
#user-profile .user-profile__wrapper {
  display: flex;
  justify-content: space-between;
}

.user-profile__wrapper .user-profile__avatar-wrapper {
  flex: 1 0 auto;
  width: 250px;
  text-align: center;
  margin-right: 20px;
}

.user-profile__wrapper .user-profile__avatar-wrapper .user-profile__image-text {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 10px;
  width: 100%;
}

.user-profile__wrapper .user-profile__avatar-wrapper .change-image__btn {
  margin-top: 10px;
  width: 100%;
  padding: 15px 10px;
  font-size: 1em;
}

.user-profile__wrapper .user-profile__avatar-wrapper img {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  box-shadow: 0px 2px 2px 2px #ccc;
  padding: 15px;
  cursor: pointer;
}

/* User Photo Edit */
.user-profile__wrapper .user-profile__avatar-wrapper .edit-user-image {
  display: none;
  position: absolute;
  top: 20%;
  left: 0;
}

.user-profile__wrapper
  .user-profile__avatar-wrapper
  .edit-user-image
  input[type="file"] {
  opacity: 0;
  width: 0;
  height: 0;
}

/** User profile section wrapper */
.user-profile__wrapper .user-profile__main-content__wrapper {
  flex: 2 0 auto;
  border: 1px solid #ccc;
}

#user-profile__main {
  display: flex;
  width: 100%;
  padding: 10px;
}

/* User feeds */
.user-feeds__wrapper {
  display: none;
}

#user-profile__main .personal-data-account__wrapper {
  width: calc(100% / 2 - 20px);
  flex: 1 1 auto;
}

#user-profile__main .personal-data-account__wrapper.account-settings {
  margin-left: 20px;
}

#user-profile__main h3 {
  font-size: 1.8em;
}

.user-profile-account__wrapper > div {
  flex: 1 1 auto;
  padding: 20px;
}

/* Notification enable/disable section */
#notif,
#misc {
  width: 100%;
}

#notif .notif__wrapper {
  width: 100%;
}

#notif .notif__wrapper h3 {
  text-align: left;
}

#misc .misc-btns__wrapper {
  padding: 20px 40px 20px 0;
  display: flex;
  justify-content: space-between;
}

#misc .deactivate-btn {
  color: #e44;
  background: #ccc;
  font-weight: 600;
}

#misc .deactivate-btn:hover {
  background: #f0f0f0;
}

/* Toggle Buttons */
.toggle-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.toggle-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  -moz-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #116466;
}

input:focus + .slider {
  box-shadow: 0 0 1px #116466;
}

input:checked + .slider::before {
  -webkit-transform: translateX(26px);
  -moz-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.round {
  border-radius: 34px;
}

.round::before {
  border-radius: 50%;
}

/* Phone Number input */
.personal-data-account__wrapper .phone-number-input__wrapper {
  width: 100%;
  display: flex;
  /* align-items: center; */
  justify-content: space-between;
}

.personal-data-account__wrapper .phone-number-input__wrapper select {
  flex: 0 0 15%;
  height: 47px;
  padding: 0.6rem;
  background: #fff;
  border: #d4d9e2 1px solid;
  border-radius: 3px 0 0 3px;
  outline: none;
}

.personal-data-account__wrapper .phone-number-input__wrapper input {
  flex: 1 1 75%;
  border-radius: 0 3px 3px 0 !important;
  border-left: none;
}

.active-block {
  display: block !important;
}

.n-active-block {
  display: none !important;
}

.no-border {
  border: none;
}

/* User Feeds Listings */
.user-feeds {
  display: none;
  flex: 1 0 auto;
  width: 250px;
  margin-right: 20px;
}

.user-feeds li {
  padding: 5px 0;
  cursor: pointer;
}

@media (max-width: 768px) {
  #user-profile .user-profile__wrapper {
    flex-direction: column;
  }
  #user-profile__main {
    flex-direction: column;
  }

  .user-profile__main-content__wrapper {
    width: 100%;
  }

  #user-profile__main .personal-data-account__wrapper {
    width: 100%;
  }

  .user-profile__wrapper .user-profile__avatar-wrapper {
    display: none;
  }

  #nav__profile li a.link-text {
    display: none;
  }

  #nav__profile li img {
    display: block;
    margin: 0 auto;
  }

  #user-profile .user-profile__stats {
    flex-direction: column;
  }

  .user-feeds {
    display: none !important;
  }
}

/* @media screen and (max-width: 1200px) and (min-width: 992px) {
  #q-meetups-preview .q-meetups-preview__block {
    flex-direction: column;
  }

  .q-question-cards {
    max-height: 100%;
  }
} */

